# haiku.rag

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: benchmarks.md  cli.md  configuration.md  index.md  installation.md  mcp.md  python.md  server.md
src/haiku/rag/: app.py  chunker.py  cli.py  client.py  config.py  logging.py  mcp.py  monitor.py  reader.py  utils.py
src/haiku/rag/embeddings/: __init__.py  base.py  ollama.py  openai.py  voyageai.py
src/haiku/rag/qa/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  prompts.py
src/haiku/rag/store/: __init__.py  engine.py
src/haiku/rag/store/models/: __init__.py  chunk.py  document.py
src/haiku/rag/store/repositories/: __init__.py  base.py  chunk.py  document.py
tests/: conftest.py  generate_benchmark_db.py  llm_judge.py  test_app.py  test_chunk.py  test_chunker.py  test_cli.py  test_client.py  test_document.py  test_embedder.py  test_monitor.py  test_qa.py  test_rebuild.py  test_search.py
